# metapp

./: .gitignore  CMakeLists.txt  license  readme.md
.github/workflows/: main.yml
cmake/: metappConfig.cmake.in
doc/: about_document.md  benchmark.md  built-in-meta-types.md  core-concepts.md  core_concepts.md  declaremetatype.md  dynamic_library.md  exception_thread_safety.md  faq.md  generate_document.md  gentutorial.py  gentutorials.py  gentutorials.sh  meta-interface-overview.md  meta_interface_overview.md  metaaccessible.md  metaclass.md  metaindexable.md  metaitem.md  metaiterable.md  metamember.md  metarepo.md  metatype.md  readme.md  reflect-metatype-declaremetatype .md  reflect-metatype-declaremetatype.md  reflect-metatype.md  registered_items.md  tables.xlsx  typekinds.md  typekinds.xlsx  variant.md  views.md
doc/interfaces/: metaaccessible.md  metacallable.md  metaclass.md  metaenum.md  metaindexable.md  metaiterable.md  metamappable.md  metamember.md  metapointerwrapper.md  metastreamable.md  metastreaming.md  metauser.md
doc/metatypes/: accessor.md  constructor.md  default_args_function.md  list-all.md  list_all.md  overloaded_function.md  overview.md  overview_metatypes.md  (+1 more)
src/: inheritancerepo_i.cpp  metaclass.cpp  metaitem.cpp  metarepo.cpp  metarepobase_i.cpp  metatype.cpp  utility.cpp  variant.cpp
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt  benchmark.h  benchmark_accessible.cpp  benchmark_callable.cpp  benchmark_misc.cpp  benchmark_variant.cpp  benchmarkmain.cpp  test.h
tests/benchmark/qt/: qtbenchmark.cpp  readme.md
tests/dlib/: CMakeLists.txt
tests/dlib/lib/: CMakeLists.txt  dlib.cpp  dlib.h  dlibdata.h
tests/dlib/tests/: CMakeLists.txt  dlibloader.cpp  dlibloader.h  dlibtest.h  dlibtestmain.cpp  test_dlib_basic.cpp
tests/docsrc/: CMakeLists.txt  doc_about_document.md  doc_benchmark.md  doc_core_concepts.cpp  doc_declaremetatype.cpp  doc_document_readme.cpp  doc_dynamic_library.cpp  doc_exception_thread_safety.md  doc_faq.cpp  doc_generate_document.md  doc_meta_interface_overview.cpp  doc_metaitem.cpp  doc_metarepo.cpp  doc_metatype.cpp  doc_readme.cpp  doc_registered_items.cpp  doc_variant.cpp  doc_views.cpp  docsrcmain.cpp  tables.xlsx  testutil.h  tutorial.h  tutorialmain.cpp
tests/docsrc/inc/: inc_doc_index.md  inc_typekind_cast.md  inc_typekind_cpp_type.md  inc_typekind_cpp_type_interfaces.md  inc_typekind_meta_interface.md  inc_typekind_up_type.md
tests/docsrc/interfaces/: doc_metaaccessible.cpp  doc_metacallable.cpp  doc_metaclass.cpp  doc_metaenum.cpp  doc_metaindexable.cpp  doc_metaiterable.cpp  doc_metamappable.cpp  doc_metamember.cpp  doc_metapointerwrapper.cpp  doc_metastreamable.cpp  doc_metastreaming.cpp  doc_metauser.cpp
tests/docsrc/metatypes/: doc_accessor.cpp  doc_constructor.cpp  doc_default_args_function.cpp  doc_list_all.cpp  doc_overloaded_function.cpp  doc_overview_metatypes.cpp  doc_variadic_function.cpp
tests/docsrc/tips/: doc_magic_enum.cpp
tests/docsrc/tutorial/: doc_tutorial_callable.cpp  doc_tutorial_json.cpp  doc_tutorial_metaclass.cpp  doc_tutorial_metaclass_inheritance.cpp  doc_tutorial_metarepo.cpp  doc_tutorial_metatype.cpp  doc_tutorial_start.cpp  doc_tutorial_variant.cpp
tests/docsrc/utilities/: doc_typelist.cpp  doc_utility.cpp
tests/tutorial/: CMakeLists.txt  tutorial.h  tutorial01_variant.cpp  tutorial02_metatype.cpp  tutorial03_callable.cpp  tutorial03_metaclass.cpp  tutorial04_metaclass.cpp  tutorial05_metaclass_inheritance.cpp  tutorial99_json.cpp  tutorial_callable.cpp  tutorial_json.cpp  tutorial_metaclass.cpp  tutorial_metaclass_inheritance.cpp  tutorial_metarepo.cpp  tutorial_metatype.cpp  tutorial_start.cpp  tutorial_variant.cpp  tutorialmain.cpp
tests/tutorial/doc/: doc_core_concepts.cpp  doc_declaremetatype.cpp  doc_meta_interface_overview.cpp
tests/tutorial/doc/interfaces/: doc_metacallable.cpp  doc_metaindexable.cpp  doc_metamember.cpp  doc_metauser.cpp
tests/tutorial/doc/metatypes/: doc_accessor.cpp  doc_constructor.cpp  doc_default_args_function.cpp  doc_variadic_function.cpp
tests/unittest/: CMakeLists.txt  test.cpp  test.h  test_basic.cpp  test_callable.cpp  test_callable_list.cpp  test_cpp17.cpp  test_inheritancerepo.cpp  test_metaaccessible.cpp  test_metacallable.cpp  test_metaclass.cpp  test_metaclass_accessible.cpp  test_metaclass_callable.cpp  test_metaclass_constructor.cpp  test_metaclass_field.cpp  test_metaclass_general.cpp  test_metaclass_method.cpp  test_metaclass_type.cpp  test_metaclass_variable.cpp  test_metaindexeable.cpp  test_metaiterable.cpp  test_metamappable.cpp  test_metarepo.cpp  test_metarepo_hierarchy.cpp  test_metarepolist.cpp  test_metarepository.cpp  test_metatype.cpp  test_metatype_multithread.cpp  test_metatyperepo.cpp  test_metauser.cpp  test_methodlist.cpp  test_overloaded_methods.cpp  test_typekind.cpp  test_usertype.cpp  test_utility.cpp  test_utility_de_pointer_reference.cpp  test_variant.cpp  test_variant_cast.cpp  test_variant_construct.cpp  test_variant_de_pointer_reference.cpp  (+4 more)
tests/unittest/include/: containerdataprovider.h  dataprovider.h  testclasses.h
tests/unittest/internal/: test_disjointview_i.cpp
tests/unittest/metatypes/: test_accessor.cpp  test_any.cpp  test_arithmetic.cpp  test_array.cpp  test_char_ptr.cpp  test_constructor.cpp  test_cv.cpp  test_default_args_function.cpp  test_deque.cpp  test_enum.cpp  test_forward_list.cpp  test_function.cpp  test_function_pointer.cpp  test_list.cpp  test_map.cpp  test_member.cpp  test_member_data.cpp  test_member_function.cpp  test_metatype_metatype.cpp  test_overloaded_function.cpp  test_pair.cpp  test_pointer.cpp  test_queue.cpp  test_reference.cpp  test_set.cpp  test_shared_ptr.cpp  test_stack.cpp  test_std_any.cpp  test_std_array.cpp  test_std_deque.cpp  test_std_forward_list.cpp  test_std_function.cpp  test_std_list.cpp  test_std_map.cpp  test_std_pair.cpp  test_std_queue.cpp  test_std_set.cpp  test_std_shared_ptr.cpp  test_std_stack.cpp  test_std_string.cpp  (+12 more)
tools/: addtoc2md.pl  cpp2md.py  gendoc.py  gentypekindtables.py  markdown-toc.py
(+197 files in other folders)
